--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -238,24 +238,39 @@ body {
   background-position: bottom left;
   background-repeat: no-repeat;
   background-size: cover;
-  height: auto;
+  padding: 4rem 0;
 }
+
 .about .text .title {
-  font-size: 3.5rem;
+  font-size: 2.5rem;
+  font-weight: 700;
+}
+
+.about .text .title-desc {
+  font-size: 1.125rem;
+  color: var(--light-color);
   margin-bottom: 1rem;
 }
-.about .text .title-desc {
-  font-size: 1.25rem;
-  color: var(--light-color);
-}
+
 .about .text .description {
   color: #7a7a7a;
-  font-size: 20px;
   font-size: 1rem;
-  padding-right: 5rem;
+  padding-right: 1rem;
 }
+
 .about .image img {
   width: 100%;
+  height: auto;
+  object-fit: cover;
+}
+
+@media (max-width: 768px) {
+  .about .text .title {
+    font-size: 2rem;
+  }
+  .about .text .description {
+    padding-right: 0;
+  }
 }
 
 .menu {
